# Fixed [artf5719] : header_version.png right top
git-svn-id: http://joomlacode.org/svn/joomla/development/releases/1.0@5019 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/install.css
+++ b/installation/install.css
@@ -35,7 +35,7 @@ body {
         position: relative;
         width: 100%;
         background: url(header_version.png) no-repeat;
-        background-position: bottom right;
+        background-position: top right;
         margin: 0px;
         padding: 0px;
 }
